Finished prototype page

--- a/hamltest/hciprojtest/src/pages/index.haml
+++ b/hamltest/hciprojtest/src/pages/index.haml
@@ -9,3 +9,6 @@
   %li UI elements from a Keynote-based iPad prototyping kit
   %li Object animations and slide transitions
 %p This approach has made reasonably high-fidelity graphics and animations possible without writing a single line of code. Interactivity is simulated with hyperlinks. The prototype is also easily extensible by adding new slides, hyperlinks, animations and stock UI elements.
+
+%div#id.class
+  %p blah
