Initial updates so navbar() can do subnavigation
Updated the navbar helper so that now it can take a list of link names
with corresponding URLs and automatically generate a navbar at any level
of nesting. NOTE: This is not yet fully functional, but have made the
first steps.

--- a/hciproj/src/pages/index.haml
+++ b/hciproj/src/pages/index.haml
@@ -1,11 +1,7 @@
-%h2
-  Project team members
-%ol
-  %li
-    James Cook
-  %li
-    Matt Duval
-  %li
-    Richard Easterling
-  %li
-    Adam Sharp
+:markdown
+  ## Project team members
+
+  - James Cook
+  - Matt Duval
+  - Richard Easterling
+  - Adam Sharp
