--- a/hciproj/src/pages/phase1/index.haml
+++ b/hciproj/src/pages/phase1/index.haml
@@ -1,18 +1,12 @@
-%h2
-  This phase
+%h2 This phase
 %ol
   %li
-    %a{ :href => "root-concept.html" }
-      Root concept
+    = link "Root concept", "./root-concept.html"
   %li
-    %a{ :href => "field-studies.html" }
-      Field studies
+    = link "Field studies", "./field-studies.html"
   %li
-    %a{ :href => "summaries.html" }
-      Summaries
+    = link "Summaries", "summaries.html"
   %li
-    %a{ :href => "problem-scenarios.html" }
-      Problem scenarios
+    = link "Problem scenarios", "problem-scenarios.html"
   %li
-    %a{ :href => "claims.html" }
-      Claims
+    = link "Claims", "claims.html"
