Evaluation design and goals in phase 4
About to go back and convert the previous phases to Markdown.

--- a/hciproj/site/stylesheets/application.css
+++ b/hciproj/site/stylesheets/application.css
@@ -22,3 +22,10 @@ a {
 
 img {
   border: 1px solid; }
+
+#nav ul {
+  display: inline; }
+  #nav ul li {
+    display: inline; }
+    #nav ul li.not-last:after {
+      content: " |"; }
