--- a/hciproj/src/stylesheets/application.sass
+++ b/hciproj/src/stylesheets/application.sass
@@ -27,3 +27,12 @@ a
 
 img
   border: 1px solid
+
+#nav
+  ul
+    display: inline
+    li
+      display: inline
+      &.not-last
+        &:after
+          content: " |"
