Imported stuff from phase 1

--- a/hciproj/src/pages/phase1/claims.haml
+++ b/hciproj/src/pages/phase1/claims.haml
@@ -8,5 +8,7 @@
     = link_to "Summaries"
   %li
     = link_to "Problem scenarios"
-  %li
-    = link_to "Claims"
+  %li Claims
+%hr
+:markdown
+  #{render_markdown "claims"}
