--- a/hciproj/src/pages/phase1/field_studies.haml
+++ b/hciproj/src/pages/phase1/field_studies.haml
@@ -2,11 +2,13 @@
 %ol
   %li
     = link_to "Root concept"
-  %li
-    = link_to "Field studies"
+  %li Field studies
   %li
     = link_to "Summaries"
   %li
     = link_to "Problem scenarios"
   %li
     = link_to "Claims"
+%hr
+:markdown
+  #{render_markdown "field_studies"}
