--- a/hciproj/src/pages/phase1/root_concept.haml
+++ b/hciproj/src/pages/phase1/root_concept.haml
@@ -1,7 +1,6 @@
 %h2 This phase
 %ol
-  %li
-    = link_to "Root concept"
+  %li Root concept
   %li
     = link_to "Field studies"
   %li
@@ -10,3 +9,6 @@
     = link_to "Problem scenarios"
   %li
     = link_to "Claims"
+%hr
+:markdown
+  #{render_markdown "root_concept"}
