--- a/hciproj/src/pages/phase1/summaries.haml
+++ b/hciproj/src/pages/phase1/summaries.haml
@@ -4,9 +4,11 @@
     = link_to "Root concept"
   %li
     = link_to "Field studies"
-  %li
-    = link_to "Summaries"
+  %li Summaries
   %li
     = link_to "Problem scenarios"
   %li
     = link_to "Claims"
+%hr
+:markdown
+  #{render_markdown "summaries"}
