--- a/hciproj/src/pages/phase2/information_design_claims.haml
+++ b/hciproj/src/pages/phase2/information_design_claims.haml
@@ -1,5 +1,4 @@
-%h2
-  This phase
+%h2 This phase
 %ol
   %li
     = link_to "Activity Design Brainstorming"
@@ -13,7 +12,7 @@
     = link_to "Information Design Brainstorming"
   %li
     = link_to "Information Design Scenarios"
-  %li
-    = link_to "Information Design Claims"
+  %li Information Design Claims
   %li
     = link_to "Representations"
+%hr
