--- a/hciproj/src/stylesheets/application.sass
+++ b/hciproj/src/stylesheets/application.sass
@@ -36,3 +36,33 @@ img
       &.not-last
         &:after
           content: " |"
+
+table.phase2
+  th,td
+    border: 1px solid #666
+    font-size: inherit
+  th,td
+    width: 266px
+  .label
+    width: 200px
+    padding-left: 10px
+    vertical-align: top
+  .header
+    border: 1px solid black
+    background: #ccc
+  .subpoint
+    padding: 3px 5px 7px
+
+table.activity-list
+  font-size: inherit
+  td,th
+    border-bottom: 1px solid black
+    padding: 5px
+  td
+    padding: 20 10px
+  .label
+    width: 140px
+    padding-left: 10px
+  th
+    border: 1px solid black
+    background: #ccc
