--- a/hciproj/src/pages/phase2/activity_claims.haml
+++ b/hciproj/src/pages/phase2/activity_claims.haml
@@ -1,5 +1,4 @@
-%h2
-  This phase
+%h2 This phase
 %ol
   %li
     = link_to "Activity Design Brainstorming"
@@ -7,8 +6,7 @@
     = link_to "Activity List"
   %li
     = link_to "Activity Scenarios"
-  %li
-    = link_to "Activity Claims"
+  %li Activity Claims
   %li
     = link_to "Information Design Brainstorming"
   %li
@@ -17,3 +15,6 @@
     = link_to "Information Design Claims"
   %li
     = link_to "Representations"
+%hr
+:markdown
+  #{render_markdown "activity_claims"}
