--- a/hciproj/src/pages/phase2/activity_design_brainstorming.haml
+++ b/hciproj/src/pages/phase2/activity_design_brainstorming.haml
@@ -1,8 +1,6 @@
-%h2
-  This phase
+%h2 This phase
 %ol
-  %li
-    = link_to "Activity Design Brainstorming"
+  %li Activity Design Brainstorming
   %li
     = link_to "Activity List"
   %li
@@ -17,3 +15,6 @@
     = link_to "Information Design Claims"
   %li
     = link_to "Representations"
+%hr
+:markdown
+  #{render_markdown "activity_design_brainstorming"}
