--- a/hciproj/src/pages/phase2/activity_scenarios.haml
+++ b/hciproj/src/pages/phase2/activity_scenarios.haml
@@ -1,12 +1,10 @@
-%h2
-  This phase
+%h2 This phase
 %ol
   %li
     = link_to "Activity Design Brainstorming"
   %li
     = link_to "Activity List"
-  %li
-    = link_to "Activity Scenarios"
+  %li Activity Scenarios
   %li
     = link_to "Activity Claims"
   %li
@@ -17,3 +15,6 @@
     = link_to "Information Design Claims"
   %li
     = link_to "Representations"
+%hr
+:markdown
+  #{render_markdown "activity_scenarios"}
