--- a/hciproj/src/pages/phase2/information_design_brainstorming.haml
+++ b/hciproj/src/pages/phase2/information_design_brainstorming.haml
@@ -1,5 +1,4 @@
-%h2
-  This phase
+%h2 This phase
 %ol
   %li
     = link_to "Activity Design Brainstorming"
@@ -9,11 +8,11 @@
     = link_to "Activity Scenarios"
   %li
     = link_to "Activity Claims"
-  %li
-    = link_to "Information Design Brainstorming"
+  %li Information Design Brainstorming
   %li
     = link_to "Information Design Scenarios"
   %li
     = link_to "Information Design Claims"
   %li
     = link_to "Representations"
+%hr
