--- a/hciproj/src/pages/phase2/representations.haml
+++ b/hciproj/src/pages/phase2/representations.haml
@@ -1,5 +1,4 @@
-%h2
-  This phase
+%h2 This phase
 %ol
   %li
     = link_to "Activity Design Brainstorming"
@@ -15,5 +14,5 @@
     = link_to "Information Design Scenarios"
   %li
     = link_to "Information Design Claims"
-  %li
-    = link_to "Representations"
+  %li Representations
+%hr
