--- a/hciproj/src/pages/phase3/interaction_design_brainstorming.haml
+++ b/hciproj/src/pages/phase3/interaction_design_brainstorming.haml
@@ -8,3 +8,6 @@
     = link_to "Interaction Design Claims"
   %li
     = link_to "Prototype"
+%hr
+:markdown
+  #{render_markdown "interaction_design_brainstorming"}
