Phase 3 ported, and prototype improvements

--- a/hciproj/src/pages/phase3/interaction_design_brainstorming.haml
+++ b/hciproj/src/pages/phase3/interaction_design_brainstorming.haml
@@ -1,7 +1,6 @@
 %h2 This phase
 %ol
-  %li
-    = link_to "Interaction Design Brainstorming"
+  %li Interaction Design Brainstorming
   %li
     = link_to "Interaction Design Scenarios"
   %li
