Navigation for Phase 5

--- a/src/pages/phase5/final_report.haml
+++ b/src/pages/phase5/final_report.haml
@@ -1,9 +1,10 @@
 %h2 This phase
 %ol
-  %li Home
+  %li
+    = link_to "Home", "index.html"
   %li
     = link_to "Prototype redesign"
   %li
     = link_to "Client meeting"
-  %li
-    = link_to "Final report"
+  %li Final report
+%hr
